--- a/pugnax_gwas/gwas/Makefile
+++ b/pugnax_gwas/gwas/Makefile
@@ -772,6 +772,9 @@ $(GEN2)RUFFv0.2_dp6_cmd.png:	$(GEN2)RUFFv0.2_dp6.raw $(GEN2)phe_RUFFv0.2.txt
 $(GEN2)RUFFv0.2_dp6_cmdf.png:	$(GEN2)RUFFv0.2_dp6.raw $(GEN2)phe_RUFFv0.2.txt
 	Rscript mdscale_filt.r $^ $@
 
+$(GEN2)RUFFv0.2_dp6_cmd_pc5.png:	$(GEN2)RUFFv0.2_dp6.raw $(GEN2)phe_RUFFv0.2.txt
+	Rscript mdscale_filt.r $^ $@
+
 ######
 
 .PHONY:	new-create-phe
