--- a/pugnax_gwas/gwas/Makefile
+++ b/pugnax_gwas/gwas/Makefile
@@ -764,7 +764,7 @@ PHE-IN2 = $(addsuffix .txt,$(phe-in2))
 #CMD = $(addsuffix _cmd.png,$(GEN-VER))
 
 .PHONY:	new-mds
-new-mds:	$(GEN2)RUFFv0.2_dp6_cmd.png $(GEN2)RUFFv0.2_dp6_cmdf.png $(GEN2)RUFFv0.2_dp6_cmd_pc5.png
+new-mds:	$(GEN2)RUFFv0.2_dp6_cmd.png $(GEN2)RUFFv0.2_dp6_cmdf.png $(GEN2)RUFFv0.2_dp6_cmd_pc5.png $(GEN2)RUFFv0.2_dp6_cmd_pc25.png $(GEN2)RUFFv0.2_dp6_cmd_pc1.png
 
 $(GEN2)RUFFv0.2_dp6_cmd.png:	$(GEN2)RUFFv0.2_dp6.raw $(GEN2)phe_RUFFv0.2.txt
 	Rscript mdscale.r $^ $@
