--- a/pugnax_gwas/gwas/Makefile
+++ b/pugnax_gwas/gwas/Makefile
@@ -756,7 +756,9 @@ refnam2 = $(subst .fa,,$(ref2))
 ###### ######
 
 .PHONY:	new-qtscore
-new-qtscore:	$(GEN2)fo_qt1_RUFFv0.2_dp6.txt $(GEN2)si_qt1_RUFFv0.2_dp6.txt $(GEN2)ufo_qt10k_RUFFv0.2_dp6.txt $(GEN2)usi_qt10k_RUFFv0.2_dp6.txt $(GEN2)contigsize.txt $(GEN2)ufo_qtibs1_RUFFv0.2_dp6.txt $(GEN2)usi_qtibs1_RUFFv0.2_dp6.txt $(GEN2)ufo_qtibs10k_RUFFv0.2_dp6.txt $(GEN2)usi_qtibs10k_RUFFv0.2_dp6.txt
+new-qtscore:	$(GEN2)ufo_qtibs1_RUFFv0.2_dp6.txt $(GEN2)usi_qtibs1_RUFFv0.2_dp6.txt $(GEN2)ufo_qtibs10k_RUFFv0.2_dp6.txt $(GEN2)usi_qtibs10k_RUFFv0.2_dp6.txt
+
+#new-qtscore:	$(GEN2)fo_qt1_RUFFv0.2_dp6.txt $(GEN2)si_qt1_RUFFv0.2_dp6.txt $(GEN2)ufo_qt10k_RUFFv0.2_dp6.txt $(GEN2)usi_qt10k_RUFFv0.2_dp6.txt $(GEN2)contigsize.txt $(GEN2)ufo_qtibs1_RUFFv0.2_dp6.txt $(GEN2)usi_qtibs1_RUFFv0.2_dp6.txt $(GEN2)ufo_qtibs10k_RUFFv0.2_dp6.txt $(GEN2)usi_qtibs10k_RUFFv0.2_dp6.txt
 
 $(GEN2)%_qt_RUFFv0.2_dp6.txt:	$(GEN2)%_qt1_RUFFv0.2_dp6.txt $(GEN2)%_qt10k_RUFFv0.2_dp6.txt
 	grep "^Chromosome" -v $(word 2,$^) | awk ' BEGIN { print "p.10k" }; { print } ' > tmp_$*Pc1df.txt
