--- a/pugnax_gwas/gwas/Makefile
+++ b/pugnax_gwas/gwas/Makefile
@@ -811,6 +811,14 @@ $(GEN2)usi_qtibs1k_RUFFv0.2_dp6.txt:	$(GEN2)RUFFv0.2_dp6.raw $(GEN2)phe_RUFFv0.2
 
 ###### ######
 
+.PHONY:	new-QC
+new-QC:	$(GEN2)RUFFv0.2_dp6_qc.raw $(GEN2)phe_RUFFv0.2_qc.txt
+
+$(GEN2)RUFFv0.2_dp6_qc.raw $(GEN2)phe_RUFFv0.2_qc.txt:	$(GEN2)phe_RUFFv0.2.txt $(GEN2)RUFFv0.2_dp6.raw
+	Rscript clean_data.r $^ $@
+
+###### ######
+
 GEN-IN2 = $(addprefix $(GEN2),$(refnam2))
 
 phe-in2 = $(subst $(GEN2),$(GEN2)phe_,$(GEN-IN2))
