--- a/pugnax_gwas/RADseq/bamstats/Makefile
+++ b/pugnax_gwas/RADseq/bamstats/Makefile
@@ -1,209 +1,72 @@
 ###### ######
 
 USR = $(shell echo $$USER)
-PTH = /data/$(USR)/ruff/pugnax_gwas/RADseq/
+PTH = /data/$(USR)/ruff/pugnax_gwas/RADseq/bamstats/
 
-ASS = $(PTH)assemblies/
-RAD = $(PTH)raw_rads/
-PRO = $(PTH)processed_rads/s002/
-MAP = $(PTH)mapped_rads/m002/
-ALN = $(PTH)alignments/
-POP = $(PTH)pop/
-
-PST = $(PTH)pstacks/
-CST = $(PTH)cstacks/
-
-###### ######
-# Stacks
-
-tlib = 2014025_TBLib1.pools 2014025_TBLib2.pools
-tpol = pooltags.txt
-bar = tag_pools.txt
+PRO = $(PTH)processed_rads/
+MAP = $(PTH)mapped_rads/
+FBAM = $(PTH)filtered_bam/
 
 BLOC = $(PRO)barcodes/
 
+###### ######
+
+tlib = 2014025_TBLib1.pools 2014025_TBLib2.pools
 TLIB = $(addprefix $(BLOC),$(tlib))
-TPOL = $(addprefix $(BLOC),$(tpol))
-BAR = $(addprefix $(BLOC),$(bar))
-
-# ( ACACGACA-TCATTGAG CAGTGTGT-TCATTGAG )
-UTAG = $(shell while read p; do cat $(TLIB) | awk -F$$'\t' -v P=$$p -- ' { print $$2"-"P } ' ; done < $(TPOL))
-
-# ( ACACGACA CAGTGTGT )
 ULIB = $(shell awk -F$$'\t' ' { print $$2 } ' $(TLIB))
 
-URUNS = $(shell ls -1 $(RAD)*1.sanfastq.gz | awk ' { gsub("$(RAD)","",$$0); gsub("_1.sanfastq.gz","",$$0); print $$0 } ')
-
-R1 = $(addsuffix _1.sanfastq.gz,$(URUNS))
-R2 = $(addsuffix _2.sanfastq.gz,$(URUNS))
-gz = $(R1) $(R2)
-GZ = $(addprefix $(RAD),$(gz))
-
-STO = $(addprefix $(PRO)sout,$(URUNS))
-
-tag1 = $(addsuffix .1.fq,$(UTAG))
-tag2 = $(addsuffix .2.fq,$(UTAG))
-tagRem1 = $(addsuffix .rem.1.fq,$(UTAG))
-tagRem2 = $(addsuffix .rem.2.fq,$(UTAG))
-
-stag = $(tag1) $(tag2) $(tagRem1) $(tagRem2)
-STAG = $(addprefix $(PRO)allout/sample_,$(stag))
-
 ###### ######
-# Mapping
 
-ref = RUFFv0.2alt.fa
-#ref = RUFFv0.2alt.fa
-#ref = Charadrius_vociferus.fa
-#ref = KILDEER.fa
-#ref = all_contigs.fa
-gal = GALLUS.fa
+ref = RUFFv0.2.fa
+#RUFFv0.2alt.fa
+#KILDEER.fa
 
 refnam = $(subst .fa,,$(ref))
-galnam = $(subst .fa,,$(gal))
-
-# Get unique de-multiplexed names (i.e. unique tags)
-# UIND = ( sample_ACACGACA-TCATTGAG )
-UIND = $(addprefix sample_,$(ULIB))
-
-#UIND = $(shell ls -1 $(PRO)allout/sample_*.fq | grep ".rem" -v | awk -v r=$(PRO) ' { gsub(r,"",$$0); gsub(".fq","",$$0); print $$0 } ' | sort | uniq)
-
-# Use list of unique names to create names for each paired-read
-# IND12 = ( sample_ACACGACA-TCATTGAG.1 sample_ACACGACA-TCATTGAG.2 )
-IND1 = $(addsuffix .1,$(UIND))
-IND2 = $(addsuffix .2,$(UIND))
-IND12 = $(IND1) $(IND2)
-
-# Add extensions for different file types
-# fq =  ( sample_ACACGACA-TCATTGAG.1.fq sample_ACACGACA-TCATTGAG.2.fq ) 
-# sai = ( sample_ACACGACA-TCATTGAG.1.sai sample_ACACGACA-TCATTGAG.2.sai )
-# bam = ( sample_ACACGACA-TCATTGAG.bam )
-# bai = ( sample_ACACGACA-TCATTGAG.bam.bai )
-pfq = $(addsuffix .fq,$(IND12))
-
-REFind12 = $(subst sample_,$(refnam)_,$(IND12))
-REFuind = $(subst sample_,$(refnam)_,$(UIND))
-
-GALind12 = $(subst sample_,$(galnam)_,$(IND12))
-GALuind = $(subst sample_,$(galnam)_,$(UIND))
-
-ind12 = $(REFind12) $(GALind12)
-uind = $(REFuind) $(GALuind)
-
-#ind12 = $(REFind12)
-#ind12 = $(GALind12)
-#uind = $(REFuind)
-#uind = $(GALuind)
-
-mfq = $(addsuffix .fq,$(ind12))
-sai = $(addsuffix .sai,$(ind12))
-
-rmfq = $(addsuffix .fq,$(REFind12))
-rsai = $(addsuffix .sai,$(REFind12))
-
-rbam = $(addsuffix .bam,$(REFuind))
-rbai = $(addsuffix .bai,$(rbam))
-rfbam = $(addsuffix .txt,$(REFuind))
-
-rpstsnps = $(addsuffix .snps.tsv.gz,$(REFuind))
-
-gbam = $(addsuffix .bam,$(GALuind))
-gbai = $(addsuffix .bai,$(gbam))
-gfbam = $(addsuffix .txt,$(GALuind))
-
-bam = $(addsuffix .bam,$(uind))
-bai = $(addsuffix .bai,$(bam))
-fbam = $(addsuffix .txt,$(uind))
-
-# Add prefixes
-GAL = $(addprefix $(ASS),$(gal))
-REF = $(addprefix $(ASS),$(ref))
-PFQ = $(addprefix $(PRO),$(pfq))
-
-MFQ = $(addprefix $(MAP),$(mfq))
-SAI = $(addprefix $(MAP),$(sai))
-
-rMFQ = $(addprefix $(MAP),$(rmfq))
-rSAI = $(addprefix $(MAP),$(rsai))
-
-rBAM = $(addprefix $(MAP),$(rbam))
-rBAI = $(addprefix $(MAP),$(rbai))
-rFBAM = $(addprefix $(MAP)filter_stats_,$(rfbam))
-
-urBAM = $(addprefix $(MAP)unsorted_,$(rbam))
-
-rawBAM = $(addprefix $(MAP)raw_,$(rbam))
-rawBAI = $(addprefix $(MAP)raw_,$(rbai))
-
-r1BAM = $(addprefix $(MAP)r1_,$(rbam))
-r1BAI = $(addprefix $(MAP)r1_,$(rbai))
-
-r1usBAM = $(addprefix $(MAP)r1us_,$(rbam))
-r1usBAI = $(addprefix $(MAP)r1us_,$(rbai))
-
-r2BAM = $(addprefix $(MAP)r2_,$(rbam))
-r2BAI = $(addprefix $(MAP)r2_,$(rbai))
-
-r2usBAM = $(addprefix $(MAP)r2us_,$(rbam))
-r2usBAI = $(addprefix $(MAP)r2us_,$(rbai))
-
-gBAM = $(addprefix $(MAP),$(gbam))
-gBAI = $(addprefix $(MAP),$(gbai))
-gFBAM = $(addprefix $(MAP)filter_stats_,$(gfbam))
-
-BAM = $(addprefix $(MAP),$(bam))
-BAI = $(addprefix $(MAP),$(bai))
-FBAM = $(addprefix $(MAP)filter_stats_,$(fbam))
-
-rPSTsnps = $(addprefix $(PST),$(rpstsnps))
-rPSTcin = $(addprefix $(PST),$(REFuind))
-
-rmdBAM = $(subst .bam,_rmd.bam,$(rBAM))
-rmdBAI = $(subst .bam.bai,_rmd.bam.bai,$(rBAI))
-
-rmd1BAM = $(subst .bam,_rmd.bam,$(r1usBAM))
-rmd1BAI = $(subst .bam.bai,_rmd.bam.bai,$(r1usBAI))
-
-rmd2BAM = $(subst .bam,_rmd.bam,$(r2usBAM))
-rmd2BAI = $(subst .bam.bai,_rmd.bam.bai,$(r2usBAI))
+REFLIB = $(foreach r,$(refnam),$(addprefix $(r)_,$(ULIB)))
 
 
-.PHONY:	ndp7
-ndp7:	$(MAP)$(refnam)_rmd.ndp7 $(MAP)r1us_$(refnam)_rmd.ndp7 $(MAP)r2us_$(refnam)_rmd.ndp7 $(MAP)raw_$(refnam).ndp7 $(MAP)r1_$(refnam).ndp7 $(MAP)r2_$(refnam).ndp7
-
-$(MAP)%.ndp7:	$(MAP)%.ninds
-	awk -F"\t" ' { if ($$3 != 0) a++ }; END { print a } ' $^ > $@ 
 
 
-.PHONY:	ninds
-ninds:	$(MAP)$(refnam)_rmd.ninds $(MAP)r1us_$(refnam)_rmd.ninds $(MAP)r2us_$(refnam)_rmd.ninds $(MAP)raw_$(refnam).ninds $(MAP)r1_$(refnam).ninds $(MAP)r2_$(refnam).ninds
 
-$(MAP)%.ninds:	$(MAP)%.dp
-	awk -F"\t" ' BEGIN { OFS="\t" }; { a=0; for (i=3; i<=NF; i++) { if ($$i > 7) a++ } print $$1,$$2,a } ' $^ > $@
+
+######
+
+#.PHONY:	ndp7
+#ndp7:	$(MAP)$(refnam)_rmd.ndp7 $(MAP)r1us_$(refnam)_rmd.ndp7 $(MAP)r2us_$(refnam)_rmd.ndp7 $(MAP)raw_$(refnam).ndp7 $(MAP)r1_$(refnam).ndp7 $(MAP)r2_$(refnam).ndp7
+
+#$(MAP)%.ndp7:	$(MAP)%.ninds
+#	awk -F"\t" ' { if ($$3 != 0) a++ }; END { print a } ' $^ > $@ 
+
+
+#.PHONY:	ninds
+#ninds:	$(MAP)$(refnam)_rmd.ninds $(MAP)r1us_$(refnam)_rmd.ninds $(MAP)r2us_$(refnam)_rmd.ninds $(MAP)raw_$(refnam).ninds $(MAP)r1_$(refnam).ninds $(MAP)r2_$(refnam).ninds
+
+#$(MAP)%.ninds:	$(MAP)%.dp
+#	awk -F"\t" ' BEGIN { OFS="\t" }; { a=0; for (i=3; i<=NF; i++) { if ($$i > 7) a++ } print $$1,$$2,a } ' $^ > $@
 
 
 
 ###### ######
 
 
-.PHONY:	depth
-depth:	$(MAP)r1_$(refnam).dp $(MAP)r2_$(refnam).dp
+#.PHONY:	depth
+#depth:	$(MAP)r1_$(refnam).dp $(MAP)r2_$(refnam).dp
 #depth:	$(MAP)$(refnam)_rmd.dp $(MAP)r1us_$(refnam)_rmd.dp $(MAP)r2us_$(refnam)_rmd.dp $(MAP)raw_$(refnam).dp $(MAP)r1_$(refnam).dp $(MAP)r2_$(refnam).dp
 
-$(MAP)r1us_$(refnam)_rmd.dp:	$(rmd1BAM)
-	samtools depth $^ > $@
+#$(MAP)r1us_$(refnam)_rmd.dp:	$(rmd1BAM)
+#	samtools depth $^ > $@
 
-$(MAP)r2us_$(refnam)_rmd.dp:	$(rmd2BAM)
-	samtools depth $^ > $@
+#$(MAP)r2us_$(refnam)_rmd.dp:	$(rmd2BAM)
+#	samtools depth $^ > $@
 
-$(MAP)r1_$(refnam).dp:	$(r1BAM)
-	samtools depth $^ > $@
+#$(MAP)r1_$(refnam).dp:	$(r1BAM)
+#	samtools depth $^ > $@
 
-$(MAP)r2_$(refnam).dp:	$(r2BAM)
-	samtools depth $^ > $@
+#$(MAP)r2_$(refnam).dp:	$(r2BAM)
+#	samtools depth $^ > $@
 
-$(MAP)$(refnam)_rmd.dp:	$(rmdBAM)
-	samtools depth $^ > $@
+#$(MAP)$(refnam)_rmd.dp:	$(rmdBAM)
+#	samtools depth $^ > $@
 
-$(MAP)raw_$(refnam).dp:	$(rawBAM)
-	samtools depth $^ > $@
+#$(MAP)raw_$(refnam).dp:	$(rawBAM)
+#	samtools depth $^ > $@
